--- a/web/pages/login.htm
+++ b/web/pages/login.htm
@@ -19,8 +19,8 @@
 <body>
 <div class="header-container">
     <div class="header"></div>
-    <img src="../images/oa_2.png" class="header-img" alt="">
-    <p class="title">北京市路侧停车动态监测和电子收费管理系统</p>
+    <img src="../images/newimages/logo@2x.png" class="header-img" alt="">
+    <p class="title">后台管理系统</p>
 </div>
 
 <form id="login" name="login" class="form">
@@ -34,12 +34,12 @@
         <div class="input_container">
             <img src="../images/index/loginUser.png" alt="" class="input_img">
             <!-- <label class="control-label" for="username">用户名</label>-->
-            <input type="text" class="form-control" id="username" placeholder="用户名" name="username">
+            <input type="text" value="admin" class="form-control" id="username" placeholder="用户名" name="username">
         </div>
         <div class="input_container input_container_2">
             <img src="../images/index/pwUser.png" alt="" class="input_img">
             <!-- <label class="control-label" for="pwd">密码</label>-->
-            <input type="password" class="form-control" id="pwd" placeholder="密码" name="pwd" autocomplete="off">
+            <input type="password" value="admin" class="form-control" id="pwd" placeholder="密码" name="pwd" autocomplete="off">
         </div>
         <br>
         <div class="form-actions">
