--- a/web/pages/Vue/vueSell.htm
+++ b/web/pages/Vue/vueSell.htm
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>sell</title>
+    <link rel="shortcut icon" href="../../../logo_icon.png"/>
+    <link rel="stylesheet" href="../../styles/bootstrap/bootstrap.css">
+    <script src="../../scripts/lib/jquery-2.2.2.min.js"></script>
+    <script src="../../scripts/common/jquery.cookie.min.js"></script>
+    <style>
+        .posit{
+            position: absolute;
+            top:100px;
+            left: 100px;
+        }
+    </style>
 </head>
 <body>
+<button class="btn-inter posit">点击生成二维码</button>
+<div id="modal"></div>
 <div style="width: 320px;height: 568px;margin: 0 auto">
     <iframe src="https://createwj.github.io/VUE2.0-sell/sell/dist/" width="100%" height="100%" frameborder="0"></iframe>
 </div>
+<script>
+    $('.posit').click(function(){
+        $('#modal').load('../QRcode/index.htm')
+        $.cookie('url', 'https://createwj.github.io/VUE2.0-sell/sell/dist/');
+    })
+</script>
 </body>
 </html>
