--- a/web/pages/frame.htm
+++ b/web/pages/frame.htm
@@ -86,10 +86,10 @@
 
         </div>
     </div>
-    <div class="tab-list-container">
+    <div class="tab-list-container" style="display: none">
         <ul class="tab-list clearfix" id="tabList"></ul>
     </div>
-    <div class="tab-content" id="tabContent">
+    <div class="tab-content" id="tabContent" style="top:60px">
     </div>
 </div>
 <!--个人信息设置-->
