--- a/web/pages/home/index.htm
+++ b/web/pages/home/index.htm
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
     <title>全屏</title>
     <link rel="stylesheet" href="../../styles/home/style.css">
+    <link rel="stylesheet" href="../../styles/home/index.css">
+    <script src="../../scripts/lib/jquery-2.2.2.min.js"></script>
     <script type="text/javascript" src="../../scripts/fullScren/fullScren.js"></script>
+    <script src="../../scripts/common/echarts/echarts-3.0.min.js"></script>
 </head>
 <body>
 <!--http://www.jq22.com/demo/Materialize201705231801/-->
 <span class="icon-enlarge" id="dd"></span>
+<script src="../../scripts/home/index.js"></script>
 <script type="text/javascript">
     function ck() {
         screenfull && screenfull.request();
