--- a/web/pages/Vue/musicApp.htm
+++ b/web/pages/Vue/musicApp.htm
@@ -12,14 +12,21 @@
             position: absolute;
             top:100px;
             left: 100px;
-        }
+        } #center{
+              width: 320px;
+              height: 568px;
+              position: absolute;
+              top:50%;
+              left: 50%;
+              transform: translateX(-50%) translateY(-50%);
+          }
     </style>
 </head>
 <body>
 <button class="btn-inter posit">点击生成二维码</button>
 <div id="modal"></div>
-<div style="width: 320px;height: 568px;margin: 0 auto">
-    <iframe src="http://116.62.168.126/#/recommend" width="100%" height="100%" frameborder="0"></iframe>
+<div id="center">
+    <iframe src="http://116.62.168.126/#/" width="100%" height="100%" frameborder="0"></iframe>
 </div>
 <script>
     $('.posit').click(function(){
