--- a/web/pages/Vue/vueSell.htm
+++ b/web/pages/Vue/vueSell.htm
@@ -13,12 +13,20 @@
             top:100px;
             left: 100px;
         }
+        #center{
+            width: 320px;
+            height: 568px;
+            position: absolute;
+            top:50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+        }
     </style>
 </head>
 <body>
 <button class="btn-inter posit">点击生成二维码</button>
 <div id="modal"></div>
-<div style="width: 320px;height: 568px;margin: 0 auto">
+<div id="center">
     <iframe src="https://createwj.github.io/VUE2.0-sell/sell/dist/" width="100%" height="100%" frameborder="0"></iframe>
 </div>
 <script>
