--- a/web/pages/base/index.html
+++ b/web/pages/base/index.html
@@ -31,7 +31,7 @@
                 <div class="titleTal">
                     <p>停车费用缴纳总金额(元)</p>
                 </div>
-                <div class="carNum">
+                <div class="carNum"  id="totalMoney">
                     <div class="line">
                         <span class="icon-0"></span>
                     </div>
@@ -45,7 +45,6 @@
             </div>
         </div>
     </div>
-    <span class="icon-1"></span>
 </div>
 
 </body>
