--- a/web/pages/home/index.htm
+++ b/web/pages/home/index.htm
@@ -7,13 +7,52 @@
     <title>全屏</title>
     <link rel="stylesheet" href="../../styles/home/style.css">
     <link rel="stylesheet" href="../../styles/home/index.css">
+    <link rel="stylesheet" href="../../base/css/reset.css">
+    <link rel="stylesheet" href="../../base/css/style.css">
+    <link rel="stylesheet" href="../../base/css/index.css">
+    <script src="../../base/js/icon.js"></script>
     <script src="../../scripts/lib/jquery-2.2.2.min.js"></script>
     <script type="text/javascript" src="../../scripts/fullScren/fullScren.js"></script>
     <script src="../../scripts/common/echarts/echarts-3.0.min.js"></script>
+    <style>
+        html,body{
+            background: #031F2D;
+        }
+    </style>
 </head>
 <body>
-<!--http://pngtosvg.com/-->
-<!--http://www.jq22.com/demo/Materialize201705231801/-->
+<div class="digit">
+    <div class="iconContent">
+        <span class="deg lt"><i></i></span>
+        <span class="deg rt"><i></i></span>
+        <span class="deg lb"><i></i></span>
+        <span class="deg rb"><i></i></span>
+        <div class="totalCar">
+            <div class="titleTal">
+                <p>服务车辆总次数</p>
+            </div>
+            <div class="carNum" id="num">
+
+            </div>
+            <div class="totalCar">
+                <div class="titleTal">
+                    <p>停车费用缴纳总金额(元)</p>
+                </div>
+                <div class="carNum"  id="totalMoney">
+                    <div class="line">
+                        <span class="icon-0"></span>
+                    </div>
+                    <div class="line">
+                        <span class="icon-1"></span>
+                    </div>
+                    <div class="line">
+                        <span class="icon-2"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <span class="icon-enlarge" id="dd"></span>
 <script src="../../scripts/home/index.js"></script>
 <script type="text/javascript">
