--- a/web/pages/Vue/musicApp.htm
+++ b/web/pages/Vue/musicApp.htm
@@ -26,7 +26,7 @@
 <button class="btn-inter posit">点击生成二维码</button>
 <div id="modal"></div>
 <div id="center">
-    <iframe src="http://116.62.168.126/#/" width="100%" height="100%" frameborder="0"></iframe>
+    <iframe src="http://116.62.168.126:82" width="100%" height="100%" frameborder="0"></iframe>
 </div>
 <script>
     $('.posit').click(function(){
