--- a/web/pages/app/sorket.htm
+++ b/web/pages/app/sorket.htm
@@ -19,6 +19,7 @@
               top:50%;
               left: 50%;
               transform: translateX(-50%) translateY(-50%);
+            background: #ccc;
           }
     </style>
 </head>
@@ -26,12 +27,12 @@
 <button class="btn-inter posit">点击生成二维码</button>
 <div id="modal"></div>
 <div id="center">
-    <iframe src="http://116.62.168.126:82" width="100%" height="100%" frameborder="0"></iframe>
+    <iframe src="http://116.62.168.126/pages/app/photo.htm" width="100%" height="100%" frameborder="0"></iframe>
 </div>
 <script>
     $('.posit').click(function(){
         $('#modal').load('../QRcode/index.htm')
-        $.cookie('url', 'http://116.62.168.126:82');
+        $.cookie('url', 'http://116.62.168.126/pages/app/photo.htm');
     })
 </script>
 </body>
