--- a/web/pages/base/index.html
+++ b/web/pages/base/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>字体</title>
     <link rel="stylesheet" href="../../base/css/reset.css">
+    <link rel="stylesheet" href="../../styles/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="../../base/css/style.css">
     <link rel="stylesheet" href="../../base/css/index.css">
     <script src="../../scripts/lib/jquery-2.2.2.min.js"></script>
@@ -78,18 +79,39 @@
             <span class="deg rt"><i></i></span>
             <span class="deg lb"><i></i></span>
             <span class="deg rb"><i></i></span>
-            <div class="totalCar">
-                <table>
-                    <tr>
-                        <td>12</td>
-                        <td>12</td>
-                    </tr>
-                    <tr>
-                        <td>12</td>
-                        <td>32</td>
-                        <td>12</td>
-                        <td>12</td>
-                    </tr>
+            <div class="tableDiv">
+                <table class="divTable table">
+                    <thead>
+                        <tr>
+                            <th colspan="3" style="font-size: 18px;">当日累计服务次数</th>
+                            <td>120</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>朝阳</th>
+                            <td>132</td>
+                            <th>海淀</th>
+                            <td>120</td>
+                        </tr>
+                        <tr>
+                            <th>朝阳</th>
+                            <td>132</td>
+                            <th>海淀</th>
+                            <td>120</td>
+                        </tr>
+                        <tr>
+                            <th>朝阳</th>
+                            <td>132</td>
+                            <th>海淀</th>
+                            <td>120</td>
+                        </tr>
+                        <tr>
+                            <th>朝阳</th>
+                            <td>132</td>
+
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
@@ -138,37 +160,8 @@
             <span class="deg rt"><i></i></span>
             <span class="deg lb"><i></i></span>
             <span class="deg rb"><i></i></span>
-            <div class="totalCar">
-                <div class="titleTal">
-                    <p>服务车辆总次数</p>
-                </div>
-                <div class="carNum" id="nums">
-                    <div class="line">
-                        <span class="icon-0"></span>
-                    </div>
-                    <div class="line">
-                        <span class="icon-0"></span>
-                    </div>
-                </div>
-                <div class="totalCar">
-                    <div class="titleTal">
-                        <p>停车费用缴纳总金额(元)</p>
-                    </div>
-                    <div class="carNum"  id="totalMoneys">
-                        <div class="line">
-                            <span class="icon-0"></span>
-                        </div>
-                        <div class="line-d">
-                            <span class="icon-d"></span>
-                        </div>
-                        <div class="line">
-                            <span class="icon-0"></span>
-                        </div>
-                        <div class="line">
-                            <span class="icon-0"></span>
-                        </div>
-                    </div>
-                </div>
+            <div class="totalCar" id="stopPhoto">
+
             </div>
         </div>
     </div>
@@ -178,37 +171,40 @@
             <span class="deg rt"><i></i></span>
             <span class="deg lb"><i></i></span>
             <span class="deg rb"><i></i></span>
-            <div class="totalCar">
-                <div class="titleTal">
-                    <p>服务车辆总次数</p>
-                </div>
-                <div class="carNum" id="nums">
-                    <div class="line">
-                        <span class="icon-0"></span>
-                    </div>
-                    <div class="line">
-                        <span class="icon-0"></span>
-                    </div>
-                </div>
-                <div class="totalCar">
-                    <div class="titleTal">
-                        <p>停车费用缴纳总金额(元)</p>
-                    </div>
-                    <div class="carNum"  id="totalMoneys">
-                        <div class="line">
-                            <span class="icon-0"></span>
-                        </div>
-                        <div class="line-d">
-                            <span class="icon-d"></span>
-                        </div>
-                        <div class="line">
-                            <span class="icon-0"></span>
-                        </div>
-                        <div class="line">
-                            <span class="icon-0"></span>
-                        </div>
-                    </div>
-                </div>
+            <div class="tableDiv">
+                <table class="divTable table">
+                    <thead>
+                    <tr>
+                        <th colspan="3" style="font-size: 17px;">当日各地区缴费金额(元)</th>
+                        <td>120</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th>朝阳</th>
+                        <td>132</td>
+                        <th>海淀</th>
+                        <td>120</td>
+                    </tr>
+                    <tr>
+                        <th>朝阳</th>
+                        <td>132</td>
+                        <th>海淀</th>
+                        <td>120</td>
+                    </tr>
+                    <tr>
+                        <th>朝阳</th>
+                        <td>132</td>
+                        <th>海淀</th>
+                        <td>120</td>
+                    </tr>
+                    <tr>
+                        <th>朝阳</th>
+                        <td>132</td>
+
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
