--- a/web/pages/base/index.htm
+++ b/web/pages/base/index.htm
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../base/css/style.css">
     <link rel="stylesheet" href="../../base/css/index.css">
     <script src="../../scripts/lib/jquery-2.2.2.min.js"></script>
+    <script src="../../scripts/common/digitalScroll.js"></script>
     <script src="../../scripts/common/jquery.cookie.min.js"></script>
     <script src="../../scripts/common/echarts/echarts-3.0.min.js"></script>
     <script src="../../scripts/lib/juicer-min.js"></script>
