html生成图片显示上传下载

--- a/web/pages/base/index.htm
+++ b/web/pages/base/index.htm
@@ -261,9 +261,11 @@
         </div>
 
     </div>
-    <div class="map" id="map">
-    </div>
+    <div class="map" id="map"></div>
     <div class="modalMap"></div>
+    <div class="numberWrapper">
+
+    </div>
 </div>
 <script type="text/javascript">
     function ck() {
